--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 			<div class="button function" id="equal">=</div>
 		</div>
 	</div>
+
+	<div class="msg">Calculator By <a href="https://github.com/dog1133299" target="_blank">Ruby</a></div>
 	<script type="text/javascript" src="js/game.js"></script>
 </body>
 </html>
